# maqam

./: APPLY.md  CODE.md  CRITIQUE.md  Cargo.toml  LOCAL_CLAUDE_SETUP.md  Makefile  README.md  default.mq  growl.mq  magiccarpet.mq  meshuggah.mq  rust-toolchain.toml
docs/: CLAUDE-WOVEN-CARPET-HANDOFF.md  carpet-renderer.md  carpet-target.md  session-v3.md  weaving-language.md
reference/carpet/: README.md  embroidered_map_prompt.md
scripts/: claude_patch_loop.sh  make_carpet_demo.py  make_guided_redraw_mp4.py  reconstruct_embroidered_carpet_no_flowers.py  reconstruct_embroidered_carpet_reference.py  setup_claude_local.sh
src/: app.rs  audio.rs  carpet.rs  command.rs  fx.rs  main.rs  midi.rs  midi_clock.rs  midi_clockout.rs  osc.rs  record.rs  record_old.rs  renderer.rs  sequencer.rs  session_v3.rs  source_background.rs  synth.rs  tuning.rs  ui.rs  vcf.rs
tools/carpet/: Cargo.toml  README.md  mq_carpet_surface_gosper_beats_v45.py
tools/carpet/src/: main.rs
