[package]
name = "maqam-live"
version = "1.0.0"
edition = "2021"
description = "Live-coding terminal sequencer for Arabic maqam music, built on just intonation"
license = "MIT"

[dependencies]
cpal              = "0.15"
ratatui           = "0.28"
crossterm         = "0.28"
crossbeam-channel = "0.5"
anyhow            = "1.0"
